Fix Bug 363586 - Kmail2 handles mailto: incorrectly. urlencoded does not work

FIXED-IN: 5.3.0
BUG: 363586